tests/ui/type_checker/ok/returns.aru
func getFloat(): float {
    return 10
}

func main() {}
