tests/ui/type_checker/invalid/wrong_return_type.aru
func foo() int {
    return "hello"
}
